--- a/packages/client/src/ui/components/DraggableWindow/styles.module.scss
+++ b/packages/client/src/ui/components/DraggableWindow/styles.module.scss
@@ -89,9 +89,7 @@
   font-size: 0;
 
   &[data-size='small'] {
-    width: 1.6rem;
-    height: 1.6rem;
-    padding: 0;
+    min-width: 1.6rem;
   }
 }
 
