--- a/packages/ui/src/components/Window/styles.module.scss
+++ b/packages/ui/src/components/Window/styles.module.scss
@@ -92,9 +92,7 @@ $mobile-window-width: min(92vw, 420px);
   font-size: 0;
 
   &[data-size='small'] {
-    width: 1.6rem;
-    height: 1.6rem;
-    padding: 0;
+    min-width: 1.6rem;
   }
 }
 
